@@ -190,7 +190,7 @@ director=VideoDevil
 icon=video.devil.image|yuvutu.png
 url=yuvutu.com.cfg
 ########################################################
-title=zzHardsextube
+title=Hardsextube
 type=rss
 genre=hardsextube
 director=VideoDevil
